# agentic-engineering-template

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CLAUDE.md  README.md  copier.yml  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  conventions.md
docs/glossary/: agentic-engineering-template.md
extensions/: agentic.py
guard/: AGENTS.md  CLAUDE.md  README.md  preferences.md
guard/.github/guards/: decision_validator.py  guards.py
guard/.github/workflows/: guards.yml
guard/docs/: conventions.md  extraction-prompt.md
scripts/: doctor.sh
scripts/agent-shims/: gh  tea
template/: .markdownlint-cli2.yaml  AGENTS.md.jinja  skills-lock.json  skills-lock.json.jinja  {% if agentic_precommit == 'prek' %}.pre-commit-config.yaml{% endif %}.jinja
template/docs/: conventions.md.jinja  {% if agentic_project_kind == 'code' %}architecture.md{% endif %}.jinja
template/docs/glossary/: {{ agentic_project_slug }}.md.jinja
template/scripts/: doctor.sh.jinja
template/scripts/agent-shims/: {% if agentic_tracker_cli != 'gh' %}gh{% endif %}.jinja  {% if agentic_tracker_cli != 'ghx' %}ghx{% endif %}.jinja  {% if agentic_tracker_cli != 'tea' %}tea{% endif %}.jinja
template/tools/: record.py
template/{% if agentic_forge == 'github' %}.github{% endif %}/workflows/: lint.yml.jinja
tests/: conftest.py  test_decision_validator.py  test_e2e.py  test_generate_project.py  test_guard_subtemplate.py  test_guards.py  test_record_core.py
tools/: record.py
